--- a/my-project-backend/pom.xml
+++ b/my-project-backend/pom.xml
@@ -58,6 +58,18 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Druid 连接池 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.2.15</version>
+        </dependency>
+        <!-- MyBatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>3.0.3</version> <!-- 确保与 Spring Boot 3.x 兼容 -->
+        </dependency>
         <!-- 类转JSON -->
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
