--- a/my-project-backend/src/main/resources/application.yml
+++ b/my-project-backend/src/main/resources/application.yml
@@ -1,7 +1,9 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: my-project-backend
-  security:
-    jwt:
-      key: abcdefg
-      expire: 7
+  profiles:
+    active: dev
+
