--- a/my-project-backend/pom.xml
+++ b/my-project-backend/pom.xml
@@ -90,6 +90,7 @@
     </dependencies>
 
     <build>
+        <finalName>manga</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
